--- a/public/uropoke/package.json
+++ b/public/uropoke/package.json
@@ -4,15 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "gulp": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Yeshi",
   "license": "ISC",
   "devDependencies": {
     "axios": "^0.19.0",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-plumber": "^1.2.0",
     "gulp-sass": "^4.0.2"
+  },
+  "dependencies": {
+    "gulp-cli": "^2.2.1"
   }
 }
